--- a/style.css
+++ b/style.css
@@ -6,13 +6,20 @@
   box-sizing: border-box;
   /* outline: solid 1px #f00; */
   font-family: sans-serif;
+  user-select: none;
+  touch-action: none;
 }
 :root {
   --color: #ffffff;
+  --color-b: #ffffff;
   --cursor-x: 130px;
   --cursor-y: 130px;
-  --main-selecter-radius: 12px;
+  --cursor-by: 0px;
+  --main-selecter-radius: 25px;
+  --bright-selecter-h: 8px;
   --pad: 20px;
+  --gap: 15px;
+  --bright-selector-w: 30px;
 }
 body {
   position: relative;
@@ -22,16 +29,31 @@ body {
   background: #000000;
   display: grid;
   place-items: center;
+  background: #222222;
+  background-image: linear-gradient(45deg, #181818, transparent),
+    linear-gradient(-45deg, #181818, transparent),
+    linear-gradient(45deg, transparent, #181818),
+    linear-gradient(-45deg, transparent, #181818);
+  background-size: 4px 4px;
+  background-position: 0 0, 2px 0, 2px -2px, 0px 2px;
+  transform: scale(0.65);
 }
 
 #me {
-  position: absolute;
-  right: 1.5vh;
-  top: 1.5vh;
-  font-weight: 900;
-  font-family: sans-serif;
-  color: #000000;
-  text-shadow: 0 0 1px #fff;1
+  position: fixed;
+  right: -20vh;
+  top: -20vh;
+  font-family: cursive;
+  color: #ffffff;
+}
+canvas {
+  background: #cccccc;
+  background-image: linear-gradient(45deg, #aaaaaa 25%, transparent 25%),
+    linear-gradient(-45deg, #aaaaaa 25%, transparent 25%),
+    linear-gradient(45deg, transparent 75%, #aaaaaa 75%),
+    linear-gradient(-45deg, transparent 75%, #aaaaaa 75%);
+  background-size: 8px 8px;
+  background-position: 0 0, 4px 0, 4px -4px, 0px 4px;
 }
 main {
   position: relative;
@@ -39,70 +61,87 @@ main {
   height: 100%;
   display: grid;
   place-items: center;
-  display: grid;
 }
 main section {
-  --padding-w: calc(100vw - 300px);
-  --padding-h: calc(100vh - 460px);
-  position: fixed;
+  position: relative;
   width: auto;
   height: auto;
   display: grid;
-  gap: 20px;
-  padding: calc(var(--padding-h) / 4) calc(var(--padding-w) / 4);
-  grid-template-rows: 260px 200px;
-  background: #222222;
-  background-image:
-  linear-gradient(45deg, #181818, transparent), 
-  linear-gradient(-45deg, #181818, transparent),
-  linear-gradient(45deg, transparent, #181818),
-  linear-gradient(-45deg, transparent, #181818);
-  background-size: 4px 4px;    
-  background-position: 0 0, 2px 0, 2px -2px, 0px 2px;
-  box-shadow: inset 0 0 30px #00000077;
+  place-items: center;
 }
 
 main section #color-box {
   position: relative;
   width: 100%;
   height: 100%;
-  gap: 20px;
   display: grid;
-  grid-template-columns: 260px 40px;
+  gap: var(--gap);
+  grid-template-columns: 400px var(--bright-selector-w);
 }
 #color-picker,
 #color-choice,
 #copy-color-section {
   position: relative;
+  height: 400px;
+}
+#choice-bright {
+  position: relative;
   width: 100%;
   height: 100%;
-}
-
-#color-pick {
-  width: 100%;
-  height: 260px;
-  border-radius: 100%;
+  outline: outset 3px #000000;
+  box-shadow: 0 0 3px #000000;
+  border-radius: 3px;
   overflow: hidden;
-  box-shadow: 0 0 5px #000000;
 }
-#color-pick::before {
+#color-pick {
+  position: relative;
+  width: 100%;
+  height: 400px;
+  border-radius: 100%;
+  display: grid;
+  place-items: center;
+  overflow: hidden;
+  outline: outset 3px #000000;
+  box-shadow: 0 0 3px #000000;
+}
+#color-pick::before,
+#choice-bright::before {
   position: absolute;
   content: "";
+  cursor: pointer;
   width: 100%;
   height: 100%;
-  border-radius: 100%;
   z-index: 100;
 }
 
-#choice-hsl::before {
-  position: absolute;
-  content: "";
-  width: 100%;
-  height: 100%;
-  inset: 0;
-  z-index: 100;
+#choice-bright::before {
+  width: 120%;
+  left: -10%;
 }
-#color-naems {
+#brithtness-selected {
+  position: absolute;
+  width: 120%;
+  height: var(--bright-selecter-h);
+  border-radius: 3px;
+  left: -10%;
+  top: calc(var(--cursor-by) - var(--bright-selecter-h) / 2);
+  outline: solid 2px #ffffff;
+  background: var(--color-b);
+  box-shadow: 0 0 1px #000000, 0 0 3px #000000;
+  z-index: 2;
+}
+#main-selected {
+  position: absolute;
+  width: var(--main-selecter-radius);
+  height: var(--main-selecter-radius);
+  left: calc(var(--cursor-x) - var(--main-selecter-radius) / 2);
+  top: calc(var(--cursor-y) - var(--main-selecter-radius) / 2);
+  border: solid 2px #ffffff;
+  background: var(--color);
+  box-shadow: 0 0 1px #000000, 0 0 3px #000000;
+  border-radius: 100%;
+}
+#color-names {
   position: relative;
   position: relative;
   inset: 4px;
@@ -112,6 +151,7 @@ main section #color-box {
   overflow: hidden;
   background: #ffffff;
   display: grid;
+  transform: scale(0.3);
   grid-template-columns: 10fr 3fr 13fr;
   place-items: center;
 }
@@ -178,28 +218,6 @@ main section #color-box {
   box-shadow: 0 0 3px #000000;
   border-radius: 5px;
 }
-#selected {
-  position: absolute;
-  width: 111%;
-  height: 4px;
-  left: -5%;
-  top: calc(var(--selecter-top) + 4px);
-  transition: linear top 0.3s;
-  border: solid 1px #ffffff;
-  outline: solid 3px #00000055;
-  z-index: 2;
-}
-#main-selected {
-  position: absolute;
-  width: var(--main-selecter-radius);
-  height: var(--main-selecter-radius);
-  left: calc(var(--cursor-x) - var(--main-selecter-radius) / 2);
-  top: calc(var(--cursor-y) - var(--main-selecter-radius) / 2);
-  border: solid 2px #ffffff;
-  background: var(--color);
-  box-shadow: 0 0 1px #000000, 0 0 3px #000000;
-  border-radius: 100%;
-}
 #tost {
   position: absolute;
   z-index: 100;
@@ -229,5 +247,3 @@ main section #color-box {
 nn {
   background-color: hwb(233 16% 78%);
 }
-
-
