--- a/style.css
+++ b/style.css
@@ -12,9 +12,9 @@
 :root {
   --color: #ffffff;
   --color-b: #ffffff;
-  --cursor-x: 130px;
-  --cursor-y: 130px;
-  --cursor-by: 0px;
+  --cursor-x: 180px;
+  --cursor-y: 180px;
+  --cursor-bx: 0px;
   --main-selecter-radius: 25px;
   --bright-selecter-h: 8px;
   --pad: 20px;
@@ -36,14 +36,13 @@ body {
     linear-gradient(-45deg, transparent, #181818);
   background-size: 4px 4px;
   background-position: 0 0, 2px 0, 2px -2px, 0px 2px;
-  transform: scale(0.65);
 }
 
 #me {
   position: fixed;
-  right: -20vh;
-  top: -20vh;
-  font-family: cursive;
+  right: 10px;
+  top: 10px;
+  font-family: Arial, Helvetica, sans-serif;
   color: #ffffff;
 }
 canvas {
@@ -59,78 +58,53 @@ main {
   position: relative;
   width: 100%;
   height: 100%;
-  display: grid;
-  place-items: center;
+  gap: 15px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  overflow: hidden;
 }
-main section {
+main #main-picker {
   position: relative;
-  width: auto;
-  height: auto;
+  width: 360px;
+  height: 360px;
   display: grid;
   place-items: center;
+  border-radius: 300px;
+}
+main #main-picker canvas {
+  border-radius: 300px;
+  outline: solid 2px #ffffff;
+  box-shadow: 0 0 3px #000000, 0 0 7px #000000, 0 0 15px #000000;
 }
 
-main section #color-box {
+main #brightness-picker {
   position: relative;
-  width: 100%;
-  height: 100%;
-  display: grid;
-  gap: var(--gap);
-  grid-template-columns: 400px var(--bright-selector-w);
+  width: 360px;
+  height: 30px;
+  border-radius: 5px;
 }
-#color-picker,
-#color-choice,
-#copy-color-section {
-  position: relative;
-  height: 400px;
+main #brightness-picker canvas {
+  border-radius: 5px;
+  outline: solid 2px #ffffff;
+  box-shadow: 0 0 3px #000000, 0 0 7px #000000;
 }
-#choice-bright {
-  position: relative;
-  width: 100%;
-  height: 100%;
-  outline: outset 3px #000000;
-  box-shadow: 0 0 3px #000000;
-  border-radius: 3px;
-  overflow: hidden;
-}
-#color-pick {
-  position: relative;
-  width: 100%;
-  height: 400px;
-  border-radius: 100%;
-  display: grid;
-  place-items: center;
-  overflow: hidden;
-  outline: outset 3px #000000;
-  box-shadow: 0 0 3px #000000;
-}
-#color-pick::before,
-#choice-bright::before {
+main #main-picker::before,
+main #brightness-picker::before {
   position: absolute;
   content: "";
-  cursor: pointer;
   width: 100%;
-  height: 100%;
-  z-index: 100;
+  height: 120%;
+  top: -10%;
+  z-index: 10;
 }
-
-#choice-bright::before {
-  width: 120%;
+main #main-picker::before {
+  height: 110%;
+  width: 110%;
   left: -10%;
 }
-#brithtness-selected {
-  position: absolute;
-  width: 120%;
-  height: var(--bright-selecter-h);
-  border-radius: 3px;
-  left: -10%;
-  top: calc(var(--cursor-by) - var(--bright-selecter-h) / 2);
-  outline: solid 2px #ffffff;
-  background: var(--color-b);
-  box-shadow: 0 0 1px #000000, 0 0 3px #000000;
-  z-index: 2;
-}
-#main-selected {
+#main-selecter {
   position: absolute;
   width: var(--main-selecter-radius);
   height: var(--main-selecter-radius);
@@ -138,23 +112,118 @@ main section #color-box {
   top: calc(var(--cursor-y) - var(--main-selecter-radius) / 2);
   border: solid 2px #ffffff;
   background: var(--color);
-  box-shadow: 0 0 1px #000000, 0 0 3px #000000;
+  box-shadow: 0 0 1px #000000, 0 0 3px #000000, 0 0 5px #000000;
   border-radius: 100%;
 }
-#color-names {
-  position: relative;
-  position: relative;
-  inset: 4px;
-  width: calc(100% - 8px);
-  height: calc(100% - 8px);
+#brithtness-selecter {
+  position: absolute;
+  width: 15px;
+  height: 120%;
   border-radius: 3px;
-  overflow: hidden;
-  background: #ffffff;
-  display: grid;
-  transform: scale(0.3);
-  grid-template-columns: 10fr 3fr 13fr;
-  place-items: center;
+  top: -10%;
+  left: calc(var(--cursor-bx) - var(--bright-selecter-h) / 2);
+  outline: solid 2px #ffffff;
+  background: var(--color-b);
+  box-shadow: 0 0 1px #000000, 0 0 3px #000000;
+  z-index: 2;
 }
+
+
+
+
+
+
+
+
+
+
+
+
+/* main section #color-box { */
+  /* position: relative; */
+  /* width: 100%; */
+  /* height: 100%; */
+  /* display: grid; */
+  /* gap: var(--gap); */
+  /* grid-template-columns: 360px var(--bright-selector-w); */
+/* } */
+/* #color-picker, */
+/* #color-choice, */
+/* #copy-color-section { */
+  /* position: relative; */
+  /* height: 360px; */
+/* } */
+/* #choice-bright { */
+  /* position: relative; */
+  /* width: 100%; */
+  /* height: 100%; */
+  /* outline: outset 3px #000000; */
+  /* box-shadow: 0 0 3px #000000; */
+  /* border-radius: 3px; */
+  /* overflow: hidden; */
+/* } */
+/* #color-pick { */
+  /* position: relative; */
+  /* width: 100%; */
+  /* height: 360px; */
+  /* border-radius: 100%; */
+  /* display: grid; */
+  /* place-items: center; */
+  /* overflow: hidden; */
+  /* outline: outset 3px #000000; */
+  /* box-shadow: 0 0 3px #000000; */
+/* } */
+/* #color-pick::before, */
+/* #choice-bright::before { */
+  /* position: absolute; */
+  /* content: ""; */
+  /* cursor: pointer; */
+  /* width: 100%; */
+  /* height: 100%; */
+  /* z-index: 100; */
+/* } */
+/*  */
+/* #choice-bright::before { */
+  /* width: 120%; */
+  /* left: -10%; */
+/* } */
+/* #brithtness-selecter { */
+  /* position: absolute; */
+  /* width: 120%; */
+  /* height: var(--bright-selecter-h); */
+  /* border-radius: 3px; */
+  /* left: -10%; */
+  /* top: calc(var(--cursor-bx) - var(--bright-selecter-h) / 2); */
+  /* outline: solid 2px #ffffff; */
+  /* background: var(--color-b); */
+  /* box-shadow: 0 0 1px #000000, 0 0 3px #000000; */
+  /* z-index: 2; */
+/* } */
+/* #main-selecter { */
+  /* position: absolute; */
+  /* width: var(--main-selecter-radius); */
+  /* height: var(--main-selecter-radius); */
+  /* left: calc(var(--cursor-x) - var(--main-selecter-radius) / 2); */
+  /* top: calc(var(--cursor-y) - var(--main-selecter-radius) / 2); */
+  /* border: solid 2px #ffffff; */
+  /* background: var(--color); */
+  /* box-shadow: 0 0 1px #000000, 0 0 3px #000000; */
+  /* border-radius: 100%; */
+/* } */
+/* #color-names { */
+  /* position: relative; */
+  /* position: relative; */
+  /* inset: 4px; */
+  /* width: calc(100% - 8px); */
+  /* height: calc(100% - 8px); */
+  /* border-radius: 3px; */
+  /* overflow: hidden; */
+  /* background: #ffffff; */
+  /* display: grid; */
+  /* transform: scale(0.3); */
+  /* grid-template-columns: 10fr 3fr 13fr; */
+  /* place-items: center; */
+/* } */
 #hex-color-code,
 #rgb-color-code {
   position: relative;
