--- a/style.css
+++ b/style.css
@@ -22,6 +22,7 @@
   --pad: 20px;
   --gap: 20px;
   --bright-selector-w: 30px;
+  --cursor: auto;
 }
 ::selection{
   background: var(--color);
@@ -82,7 +83,7 @@ main #main-picker {
   display: grid;
   place-items: center;
   border-radius: 300px;
-  cursor: pointer;
+  cursor: var(--cursor);
 }
 main #main-picker canvas {
   border-radius: 100%;
@@ -95,7 +96,7 @@ main #brightness-picker {
   width: var(--color-picker-radius);
   height: var(--brightness-picker-height);
   border-radius: 5px;
-  cursor: pointer;
+  cursor: var(--cursor);
 }
 main #brightness-picker canvas {
   border-radius: 5px;
@@ -209,91 +210,15 @@ input {
 }
 
 
-/* main section #color-box { */
-/* position: relative; */
-/* width: 100%; */
-/* height: 100%; */
-/* display: grid; */
-/* gap: var(--gap); */
-/* grid-template-columns: var(--color-picker-radius) var(--bright-selector-w); */
-/* } */
-/* #color-picker, */
-/* #color-choice, */
-/* #copy-color-section { */
-/* position: relative; */
-/* height: var(--color-picker-radius); */
-/* } */
-/* #choice-bright { */
-/* position: relative; */
-/* width: 100%; */
-/* height: 100%; */
-/* outline: outset 3px #000000; */
-/* box-shadow: 0 0 3px #000000; */
-/* border-radius: 3px; */
-/* overflow: hidden; */
-/* } */
-/* #color-pick { */
-/* position: relative; */
-/* width: 100%; */
-/* height: var(--color-picker-radius); */
-/* border-radius: 100%; */
-/* display: grid; */
-/* place-items: center; */
-/* overflow: hidden; */
-/* outline: outset 3px #000000; */
-/* box-shadow: 0 0 3px #000000; */
-/* } */
-/* #color-pick::before, */
-/* #choice-bright::before { */
-/* position: absolute; */
-/* content: ""; */
-/* cursor: pointer; */
-/* width: 100%; */
-/* height: 100%; */
-/* z-index: 100; */
-/* } */
-/*  */
-/* #choice-bright::before { */
-/* width: 120%; */
-/* left: -10%; */
-/* } */
-/* #brithtness-selecter { */
-/* position: absolute; */
-/* width: 120%; */
-/* height: var(--bright-selecter-w); */
-/* border-radius: 3px; */
-/* left: -10%; */
-/* top: calc(var(--cursor-bx) - var(--bright-selecter-w) / 2); */
-/* outline: solid 2px #ffffff; */
-/* background: var(--color-b); */
-/* box-shadow: 0 0 1px #000000, 0 0 3px #000000; */
-/* z-index: 2; */
-/* } */
-/* #main-selecter { */
-/* position: absolute; */
-/* width: var(--main-selecter-radius); */
-/* height: var(--main-selecter-radius); */
-/* left: calc(var(--cursor-x) - var(--main-selecter-radius) / 2); */
-/* top: calc(var(--cursor-y) - var(--main-selecter-radius) / 2); */
-/* border: solid 2px #ffffff; */
-/* background: var(--color); */
-/* box-shadow: 0 0 1px #000000, 0 0 3px #000000; */
-/* border-radius: 100%; */
-/* } */
-/* #color-names { */
-/* position: relative; */
-/* position: relative; */
-/* inset: 4px; */
-/* width: calc(100% - 8px); */
-/* height: calc(100% - 8px); */
-/* border-radius: 3px; */
-/* overflow: hidden; */
-/* background: #ffffff; */
-/* display: grid; */
-/* transform: scale(0.3); */
-/* grid-template-columns: 10fr 3fr 13fr; */
-/* place-items: center; */
-/* } */
+
+
+
+
+
+
+
+
+
 #hex-color-code,
 #rgb-color-code {
   position: relative;
