--- a/style.css
+++ b/style.css
@@ -132,7 +132,7 @@ main #brightness-picker canvas {
   z-index: 2;
 }
 main #color-output-box {
-  position: fixed;
+  position: relative;
   width: 340px;
   height: 200px;
   border-radius: 12px;
@@ -142,7 +142,7 @@ main #color-output-box {
   grid-template-columns: 1fr 1fr;
   grid-template-rows: 2fr 2fr 2fr;
   background: var(--color);
-  bottom: 50px;
+  bottom: 0;
   z-index: 10;
   transition: bottom 0.3s linear;
 }
@@ -191,6 +191,9 @@ main #color-output-box {
   right: 0;
   letter-spacing: 2px;
   font-weight: 600;
+}
+#cmyk-input {
+  font-size: 70%;
 }
 input {
   position: absolute;
